Increasing permsize